# sudokugen

./: Makefile  Makefile.in  ProjectHome.md  cella.cpp  cellavisual.h  config.h  costanti.h  latex.cpp  solver.cpp  solver.h  strategiadata.cpp  sudokubug.txt  sudokufile.h  test.cpp  utilities.cpp  utilities.h
.deps/: interactive.Po  latex.Po  solver.Po  test.Po
trunk/: Makefile.am  benchmark.cpp  benchmark.h  candidati.cpp  candidati.h  cella.h  cellavisual.cpp  celle.h  genera.cpp  genera.h  interactive.cpp  interactive.h  latex.h  main.cpp  pos.h  scacchiera.cpp  scacchiera.h  strategiadata.h  sudokufile.cpp  test.h
trunk/.deps/: benchmark.Po  candidati.Po  cella.Po  genera.Po  main.Po  scacchiera.Po  strategiadata.Po  sudokufile.Po  utilities.Po
wiki/: PageName.wiki
