bin_PROGRAMS = sudoku

sudoku_SOURCES = main.cpp candidati.cpp cella.cpp scacchiera.cpp cella.h costanti.h candidati.h scacchiera.h celle.h benchmark.h benchmark.cpp test.h test.cpp genera.h genera.cpp utilities.h utilities.cpp interactive.h interactive.cpp sudokufile.h sudokufile.cpp strategiadata.h strategiadata.cpp pos.h solver.h solver.cpp latex.h latex.cpp

include $(top_srcdir)/aminclude.am
